[tool.poetry]
name = "structure-project"
version = "0.1.0"
description = ""
authors = ["ItsAmmarTariq <ammarch935@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
